ocio-sys/src/bridge.hpp

// --- FileRules ---
void* ocio_file_rules_create(void);
void ocio_file_rules_destroy(void* handle);
size_t ocio_file_rules_get_num_entries(void* handle);
size_t ocio_file_rules_get_index_for_rule(void* handle, const char* ruleName);
void* ocio_file_rules_get_name(void* handle, size_t ruleIndex);
void* ocio_file_rules_get_pattern(void* handle, size_t ruleIndex);
void ocio_file_rules_set_pattern(void* handle, size_t ruleIndex, const char* pattern);
void* ocio_file_rules_get_extension(void* handle, size_t ruleIndex);
void ocio_file_rules_set_extension(void* handle, size_t ruleIndex, const char* extension);
void* ocio_file_rules_get_regex(void* handle, size_t ruleIndex);
void ocio_file_rules_set_regex(void* handle, size_t ruleIndex, const char* regex);
void* ocio_file_rules_get_color_space(void* handle, size_t ruleIndex);
void ocio_file_rules_set_color_space(void* handle, size_t ruleIndex, const char* colorSpace);
size_t ocio_file_rules_get_num_custom_keys(void* handle, size_t ruleIndex);
void* ocio_file_rules_get_custom_key_name(void* handle, size_t ruleIndex, size_t key);
void* ocio_file_rules_get_custom_key_value(void* handle, size_t ruleIndex, size_t key);
void ocio_file_rules_set_custom_key(void* handle, size_t ruleIndex, const char* key, const char* value);
void ocio_file_rules_insert_rule(void* handle, size_t ruleIndex, const char* name, const char* colorSpace, const char* pattern, const char* extension);
void ocio_file_rules_insert_rule_v1(void* handle, size_t ruleIndex, const char* name, const char* colorSpace, const char* regex);
void ocio_file_rules_insert_path_search_rule(void* handle, size_t ruleIndex);
void ocio_file_rules_set_default_rule_color_space(void* handle, const char* colorSpace);
void ocio_file_rules_remove_rule(void* handle, size_t ruleIndex);
void ocio_file_rules_increase_rule_priority(void* handle, size_t ruleIndex);
void ocio_file_rules_decrease_rule_priority(void* handle, size_t ruleIndex);
bool ocio_file_rules_is_default(void* handle);
// --- ViewingRules ---
void* ocio_viewing_rules_create(void);
void* ocio_viewing_rules_create_editable_copy(void* handle);
void ocio_viewing_rules_destroy(void* handle);
size_t ocio_viewing_rules_get_num_entries(void* handle);
size_t ocio_viewing_rules_get_index_for_rule(void* handle, const char* ruleName);
void* ocio_viewing_rules_get_name(void* handle, size_t ruleIndex);
size_t ocio_viewing_rules_get_num_color_spaces(void* handle, size_t ruleIndex);
void* ocio_viewing_rules_get_color_space(void* handle, size_t ruleIndex, size_t colorSpaceIndex);
void ocio_viewing_rules_add_color_space(void* handle, size_t ruleIndex, const char* colorSpace);
void ocio_viewing_rules_remove_color_space(void* handle, size_t ruleIndex, size_t colorSpaceIndex);
size_t ocio_viewing_rules_get_num_encodings(void* handle, size_t ruleIndex);
void* ocio_viewing_rules_get_encoding(void* handle, size_t ruleIndex, size_t encodingIndex);
void ocio_viewing_rules_add_encoding(void* handle, size_t ruleIndex, const char* encoding);
void ocio_viewing_rules_remove_encoding(void* handle, size_t ruleIndex, size_t encodingIndex);
size_t ocio_viewing_rules_get_num_custom_keys(void* handle, size_t ruleIndex);
void* ocio_viewing_rules_get_custom_key_name(void* handle, size_t ruleIndex, size_t keyIndex);
void* ocio_viewing_rules_get_custom_key_value(void* handle, size_t ruleIndex, size_t keyIndex);
void ocio_viewing_rules_set_custom_key(void* handle, size_t ruleIndex, const char* key, const char* value);
void ocio_viewing_rules_insert_rule(void* handle, size_t ruleIndex, const char* ruleName);
void ocio_viewing_rules_remove_rule(void* handle, size_t ruleIndex);
// --- ColorSpace ---
void* ocio_color_space_create(void);
void ocio_color_space_destroy(void* handle);
void* ocio_color_space_get_name(void* handle);
void ocio_color_space_set_name(void* handle, const char* name);
size_t ocio_color_space_get_num_aliases(void* handle);
void* ocio_color_space_get_alias(void* handle, size_t idx);
bool ocio_color_space_has_alias(void* handle, const char* alias);
void ocio_color_space_add_alias(void* handle, const char* alias);
void ocio_color_space_remove_alias(void* handle, const char* alias);
void ocio_color_space_clear_aliases(void* handle);
void* ocio_color_space_get_family(void* handle);
void ocio_color_space_set_family(void* handle, const char* family);
void* ocio_color_space_get_equality_group(void* handle);
void ocio_color_space_set_equality_group(void* handle, const char* equalityGroup);
void* ocio_color_space_get_description(void* handle);
void ocio_color_space_set_description(void* handle, const char* description);
void* ocio_color_space_get_interop_id(void* handle);
void ocio_color_space_set_interop_id(void* handle, const char* interopID);
void ocio_color_space_set_interchange_attribute(void* handle, const char* attrName, const char* value);
const char* ocio_color_space_get_interchange_attribute(void* handle, const char* attrName);
int ocio_color_space_get_num_interchange_attributes(void* handle);
const char* ocio_color_space_get_interchange_attribute_name_by_index(void* handle, int index);
const char* ocio_color_space_get_interchange_attribute_value_by_index(void* handle, int index);
int ocio_color_space_get_bit_depth(void* handle);
void ocio_color_space_set_bit_depth(void* handle, int bitDepth);
int ocio_color_space_get_reference_space_type(void* handle);
bool ocio_color_space_has_category(void* handle, const char* category);
void ocio_color_space_add_category(void* handle, const char* category);
void ocio_color_space_remove_category(void* handle, const char* category);
int ocio_color_space_get_num_categories(void* handle);
void* ocio_color_space_get_category(void* handle, int index);
void ocio_color_space_clear_categories(void* handle);
void* ocio_color_space_get_encoding(void* handle);
void ocio_color_space_set_encoding(void* handle, const char* encoding);
bool ocio_color_space_is_data(void* handle);
void ocio_color_space_set_is_data(void* handle, bool isData);
int ocio_color_space_get_allocation(void* handle);
void ocio_color_space_set_allocation(void* handle, int allocation);
int ocio_color_space_get_allocation_num_vars(void* handle);
void ocio_color_space_get_allocation_vars(void* handle, void* vars);
void ocio_color_space_set_allocation_vars(void* handle, int numvars, const float* vars);
void* ocio_color_space_get_transform(void* handle, int dir);
void ocio_color_space_set_transform(void* handle, void* transform, int dir);
// --- ColorSpaceSet ---
void* ocio_color_space_set_create(void);
void ocio_color_space_set_destroy(void* handle);
int ocio_color_space_set_get_num_color_spaces(void* handle);
void* ocio_color_space_set_get_color_space_name_by_index(void* handle, int index);
void* ocio_color_space_set_get_color_space_by_index(void* handle, int index);
void* ocio_color_space_set_get_color_space(void* handle, const char* name);
int ocio_color_space_set_get_color_space_index(void* handle, const char* name);
bool ocio_color_space_set_has_color_space(void* handle, const char* name);
void ocio_color_space_set_add_color_space(void* handle, void* cs);
void ocio_color_space_set_add_color_spaces(void* handle, void* cs);
void ocio_color_space_set_remove_color_space(void* handle, const char* name);
void ocio_color_space_set_remove_color_spaces(void* handle, void* cs);
void ocio_color_space_set_clear_color_spaces(void* handle);