ocio-sys/src/lib.rs


    // --- FileRules ---
    pub fn ocio_file_rules_create() -> *mut c_void;
    pub fn ocio_file_rules_destroy(handle: *mut c_void);
    pub fn ocio_file_rules_get_num_entries(handle: *mut c_void) -> usize;
    pub fn ocio_file_rules_get_index_for_rule(handle: *mut c_void, ruleName: *const i8) -> usize;
    pub fn ocio_file_rules_get_name(handle: *mut c_void, ruleIndex: usize) -> *mut c_void;
    pub fn ocio_file_rules_get_pattern(handle: *mut c_void, ruleIndex: usize) -> *mut c_void;
    pub fn ocio_file_rules_set_pattern(
        handle: *mut c_void,
        ruleIndex: usize,
        pattern: *const i8,
    ) -> ();
    pub fn ocio_file_rules_get_extension(handle: *mut c_void, ruleIndex: usize) -> *mut c_void;
    pub fn ocio_file_rules_set_extension(
        handle: *mut c_void,
        ruleIndex: usize,
        extension: *const i8,
    ) -> ();
    pub fn ocio_file_rules_get_regex(handle: *mut c_void, ruleIndex: usize) -> *mut c_void;
    pub fn ocio_file_rules_set_regex(handle: *mut c_void, ruleIndex: usize, regex: *const i8)
        -> ();
    pub fn ocio_file_rules_get_color_space(handle: *mut c_void, ruleIndex: usize) -> *mut c_void;
    pub fn ocio_file_rules_set_color_space(
        handle: *mut c_void,
        ruleIndex: usize,
        colorSpace: *const i8,
    ) -> ();
    pub fn ocio_file_rules_get_num_custom_keys(handle: *mut c_void, ruleIndex: usize) -> usize;
    pub fn ocio_file_rules_get_custom_key_name(
        handle: *mut c_void,
        ruleIndex: usize,
        key: usize,
    ) -> *mut c_void;
    pub fn ocio_file_rules_get_custom_key_value(
        handle: *mut c_void,
        ruleIndex: usize,
        key: usize,
    ) -> *mut c_void;
    pub fn ocio_file_rules_set_custom_key(
        handle: *mut c_void,
        ruleIndex: usize,
        key: *const i8,
        value: *const i8,
    ) -> ();
    pub fn ocio_file_rules_insert_rule(
        handle: *mut c_void,
        ruleIndex: usize,
        name: *const i8,
        colorSpace: *const i8,
        pattern: *const i8,
        extension: *const i8,
    ) -> ();
    pub fn ocio_file_rules_insert_rule_v1(
        handle: *mut c_void,
        ruleIndex: usize,
        name: *const i8,
        colorSpace: *const i8,
        regex: *const i8,
    ) -> ();
    pub fn ocio_file_rules_insert_path_search_rule(handle: *mut c_void, ruleIndex: usize) -> ();
    pub fn ocio_file_rules_set_default_rule_color_space(
        handle: *mut c_void,
        colorSpace: *const i8,
    ) -> ();
    pub fn ocio_file_rules_remove_rule(handle: *mut c_void, ruleIndex: usize) -> ();
    pub fn ocio_file_rules_increase_rule_priority(handle: *mut c_void, ruleIndex: usize) -> ();
    pub fn ocio_file_rules_decrease_rule_priority(handle: *mut c_void, ruleIndex: usize) -> ();
    pub fn ocio_file_rules_is_default(handle: *mut c_void) -> bool;

    // --- ViewingRules ---
    pub fn ocio_viewing_rules_create() -> *mut c_void;
    pub fn ocio_viewing_rules_create_editable_copy(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_viewing_rules_destroy(handle: *mut c_void);
    pub fn ocio_viewing_rules_get_num_entries(handle: *mut c_void) -> usize;
    pub fn ocio_viewing_rules_get_index_for_rule(
        handle: *mut c_void,
        ruleName: *const i8,
    ) -> usize;
    pub fn ocio_viewing_rules_get_name(handle: *mut c_void, ruleIndex: usize) -> *mut c_void;
    pub fn ocio_viewing_rules_get_num_color_spaces(
        handle: *mut c_void,
        ruleIndex: usize,
    ) -> usize;
    pub fn ocio_viewing_rules_get_color_space(
        handle: *mut c_void,
        ruleIndex: usize,
        colorSpaceIndex: usize,
    ) -> *mut c_void;
    pub fn ocio_viewing_rules_add_color_space(
        handle: *mut c_void,
        ruleIndex: usize,
        colorSpace: *const i8,
    ) -> ();
    pub fn ocio_viewing_rules_remove_color_space(
        handle: *mut c_void,
        ruleIndex: usize,
        colorSpaceIndex: usize,
    ) -> ();
    pub fn ocio_viewing_rules_get_num_encodings(handle: *mut c_void, ruleIndex: usize) -> usize;
    pub fn ocio_viewing_rules_get_encoding(
        handle: *mut c_void,
        ruleIndex: usize,
        encodingIndex: usize,
    ) -> *mut c_void;
    pub fn ocio_viewing_rules_add_encoding(
        handle: *mut c_void,
        ruleIndex: usize,
        encoding: *const i8,
    ) -> ();
    pub fn ocio_viewing_rules_remove_encoding(
        handle: *mut c_void,
        ruleIndex: usize,
        encodingIndex: usize,
    ) -> ();
    pub fn ocio_viewing_rules_get_num_custom_keys(
        handle: *mut c_void,
        ruleIndex: usize,
    ) -> usize;
    pub fn ocio_viewing_rules_get_custom_key_name(
        handle: *mut c_void,
        ruleIndex: usize,
        keyIndex: usize,
    ) -> *mut c_void;
    pub fn ocio_viewing_rules_get_custom_key_value(
        handle: *mut c_void,
        ruleIndex: usize,
        keyIndex: usize,
    ) -> *mut c_void;
    pub fn ocio_viewing_rules_set_custom_key(
        handle: *mut c_void,
        ruleIndex: usize,
        key: *const i8,
        value: *const i8,
    ) -> ();
    pub fn ocio_viewing_rules_insert_rule(
        handle: *mut c_void,
        ruleIndex: usize,
        ruleName: *const i8,
    ) -> ();
    pub fn ocio_viewing_rules_remove_rule(handle: *mut c_void, ruleIndex: usize) -> ();

    // --- ColorSpace ---
    pub fn ocio_color_space_create() -> *mut c_void;
    pub fn ocio_color_space_destroy(handle: *mut c_void);
    pub fn ocio_color_space_get_name(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_color_space_set_name(handle: *mut c_void, name: *const i8) -> ();
    pub fn ocio_color_space_get_num_aliases(handle: *mut c_void) -> usize;
    pub fn ocio_color_space_get_alias(handle: *mut c_void, idx: usize) -> *mut c_void;
    pub fn ocio_color_space_has_alias(handle: *mut c_void, alias: *const i8) -> bool;
    pub fn ocio_color_space_add_alias(handle: *mut c_void, alias: *const i8) -> ();
    pub fn ocio_color_space_remove_alias(handle: *mut c_void, alias: *const i8) -> ();
    pub fn ocio_color_space_clear_aliases(handle: *mut c_void) -> ();
    pub fn ocio_color_space_get_family(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_color_space_set_family(handle: *mut c_void, family: *const i8) -> ();
    pub fn ocio_color_space_get_equality_group(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_color_space_set_equality_group(handle: *mut c_void, equalityGroup: *const i8)
        -> ();
    pub fn ocio_color_space_get_description(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_color_space_set_description(handle: *mut c_void, description: *const i8) -> ();
    pub fn ocio_color_space_get_interop_id(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_color_space_set_interop_id(handle: *mut c_void, interopID: *const i8) -> ();
    pub fn ocio_color_space_set_interchange_attribute(
        handle: *mut c_void,
        attrName: *const i8,
        value: *const i8,
    ) -> ();
    pub fn ocio_color_space_get_interchange_attribute(
        handle: *mut c_void,
        attrName: *const i8,
    ) -> *const i8;
    pub fn ocio_color_space_get_num_interchange_attributes(handle: *mut c_void) -> i32;
    pub fn ocio_color_space_get_interchange_attribute_name_by_index(
        handle: *mut c_void,
        index: i32,
    ) -> *const i8;
    pub fn ocio_color_space_get_interchange_attribute_value_by_index(
        handle: *mut c_void,
        index: i32,
    ) -> *const i8;
    pub fn ocio_color_space_get_bit_depth(handle: *mut c_void) -> i32;
    pub fn ocio_color_space_set_bit_depth(handle: *mut c_void, bitDepth: i32) -> ();
    pub fn ocio_color_space_get_reference_space_type(handle: *mut c_void) -> i32;
    pub fn ocio_color_space_has_category(handle: *mut c_void, category: *const i8) -> bool;
    pub fn ocio_color_space_add_category(handle: *mut c_void, category: *const i8) -> ();
    pub fn ocio_color_space_remove_category(handle: *mut c_void, category: *const i8) -> ();
    pub fn ocio_color_space_get_num_categories(handle: *mut c_void) -> i32;
    pub fn ocio_color_space_get_category(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_color_space_clear_categories(handle: *mut c_void) -> ();
    pub fn ocio_color_space_get_encoding(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_color_space_set_encoding(handle: *mut c_void, encoding: *const i8) -> ();
    pub fn ocio_color_space_is_data(handle: *mut c_void) -> bool;
    pub fn ocio_color_space_set_is_data(handle: *mut c_void, isData: bool) -> ();
    pub fn ocio_color_space_get_allocation(handle: *mut c_void) -> i32;
    pub fn ocio_color_space_set_allocation(handle: *mut c_void, allocation: i32) -> ();
    pub fn ocio_color_space_get_allocation_num_vars(handle: *mut c_void) -> i32;
    pub fn ocio_color_space_get_allocation_vars(handle: *mut c_void, vars: *mut c_void) -> ();
    pub fn ocio_color_space_set_allocation_vars(
        handle: *mut c_void,
        numvars: i32,
        vars: *mut c_void,
    ) -> ();
    pub fn ocio_color_space_get_transform(handle: *mut c_void, dir: i32) -> *mut c_void;
    pub fn ocio_color_space_set_transform(
        handle: *mut c_void,
        transform: *mut c_void,
        dir: i32,
    ) -> ();

    // --- ColorSpaceSet ---
    pub fn ocio_color_space_set_create() -> *mut c_void;
    pub fn ocio_color_space_set_destroy(handle: *mut c_void);
    pub fn ocio_color_space_set_get_num_color_spaces(handle: *mut c_void) -> i32;
    pub fn ocio_color_space_set_get_color_space_name_by_index(
        handle: *mut c_void,
        index: i32,
    ) -> *mut c_void;
    pub fn ocio_color_space_set_get_color_space_by_index(
        handle: *mut c_void,
        index: i32,
    ) -> *mut c_void;
    pub fn ocio_color_space_set_get_color_space(
        handle: *mut c_void,
        name: *const i8,
    ) -> *mut c_void;
    pub fn ocio_color_space_set_get_color_space_index(handle: *mut c_void, name: *const i8) -> i32;
    pub fn ocio_color_space_set_has_color_space(handle: *mut c_void, name: *const i8) -> bool;
    pub fn ocio_color_space_set_add_color_space(handle: *mut c_void, cs: *mut c_void) -> ();
    pub fn ocio_color_space_set_add_color_spaces(handle: *mut c_void, cs: *mut c_void) -> ();
    pub fn ocio_color_space_set_remove_color_space(handle: *mut c_void, name: *const i8) -> ();
    pub fn ocio_color_space_set_remove_color_spaces(handle: *mut c_void, cs: *mut c_void) -> ();
    pub fn ocio_color_space_set_clear_color_spaces(handle: *mut c_void) -> ();
